Tue Jun 17 16:34:17 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* bearoff.c: be more silent when db files are missing

Tue Jun 17 16:31:10 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gtktoolbar.c, xpm/Makefile.am, xpm/gnubg-big.xpm,
	xpm/stock_edit.xpm, xpm/stock_new.xpm, xpm/stock_open.xpm,
	xpm/stock_save.xpm, xpm/stock_undo.xpm, xpm/tb_double.xpm,
	xpm/tb_edit.xpm, xpm/tb_no.xpm, xpm/tb_roll.xpm, xpm/tb_stop.xpm,
	xpm/tb_undo.xpm, xpm/tb_yes.xpm: use gtk stock icons where directly
	applicable

Fri Jun 13 13:04:19 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* bearoff.c, bearoff.h, eval.c, configure.in: always mmap datase files
	using g_mapped_file. Read using fopen rather than open. Various
	cleanups.

	* gtkgame.c, util.c: revert some recent visual c++ prompted changes

Thu Jun 12 10:23:38 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* bearoff.c, bearoff.h: more cleanup of unused code

Thu Jun 12 00:20:30 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* bearoff.c, bearoff.h: remove unused code to read non-gnubg exact
	bearoff databases.

Wed Jun 11 16:34:04 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* dice.c, dice.h, set.c: use fopen instead of open

Wed Jun 11 15:06:45 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* html.c, htmlimages.c, board3d/misc3d.c: replace access by
	g_file_test

Tue Jun 10 10:07:33 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gtkame.c, xpm/Makefile.am: use GTK_STOCK_STOP rather than keeping
	out own copy.

Mon Jun  9 17:56:00 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* M gtkgame.c, gtkwindows.c, gtkwindows.h, pixmaps/Makefile.am,
	pixmaps/gnubg-big.png, gtksplash.c: move gnubg-big.png out of xpm

Mon Jun  9 00:14:45 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* pixmaps, gtkgame.c, Makefile.am, configure.in: add expected
	directory structure for the icon. Make a windows .ico file

Sat Jun  7 22:41:53 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* rollout.c: fix a problem with too many trials done. Be a bit more